syntax = "proto3";

// import "cy/game/pb/common/common.proto";

package pbgame_mj_changshu;

message cyU32String {
    uint32 Val = 1;
    string Name = 2;
}

message RoundInfo {
    uint32 LoopCnt = 1; // 局数 8 16 
    uint32 Fee = 2; // 个人费用 1 2    
}

// 创建房间参数
message CreateArg {
    repeated cyU32String Rule = 1;
    uint32 Barhead = 2;
    uint32 PlayerCount = 3;
    uint32 Dipiao = 4;
    RoundInfo RInfo = 5;
    uint32 PaymentType = 6;
    uint32 Voice = 7;
    uint32 LimitIP = 8; 
}

// 创建房间参数模板
message CreateArgTpl {
    // 玩法  1 二摸三冲 2 豹子翻倍
    repeated cyU32String Rule = 1;
    // 杠头  1 扳4个 2 扳8个 3 独龙杠
    repeated cyU32String Barhead = 2;
    // 人数 2人 3人 4人
    repeated cyU32String PlayerCount = 3;
    // 底飘 0 ~ 10
    repeated cyU32String Dipiao = 4;
    // 局数
    repeated RoundInfo RInfo = 5;
    // 支付方式 1 个人支付 2 平局支付
    repeated cyU32String PaymentType = 6;
    // 语音 1 普通场 2 语音场
    repeated cyU32String Voice = 7;
    // IP以及位置限制 1 都不选 2 IP以及位置限制 3 IP以及位置限制+强制定位 
    uint32 LimitIP = 8;      
    // 默认参数
    CreateArg Def = 9;
}

// 桌子参数
message DeskArg {
    // 创建房间参数
    repeated cyU32String Rule = 1;
    uint32 Barhead = 2;
    uint32 PlayerCount = 3;
    uint32 Dipiao = 4;
    RoundInfo RInfo = 5;
    uint32 PaymentType = 6;
    uint32 LimitIP = 7;    
    uint32 Voice = 8;

    bool Enable = 9;    
    // 1 匹配 2 好友 3 比赛 
    uint32 Type = 10;     
    // 服务费类型 1 金币 2 钻石
    uint32 FeeType = 11; 
    uint64 DeskID = 12;
    uint32 RoomId = 13; // 匹配场时才有用     
    string RoomName = 14; // 匹配场时才有用
}

